
[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "Fetch PubMed papers with pharmaceutical affiliations"
authors = ["Kalpana Prabha <you@example.com>"]
packages = [{ include = "pubmed_fetcher" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"

[tool.poetry.scripts]
get-papers-list = "cli:main"
